# cbench

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
shaders/: test.wgsl
src/: bencher.rs  gpu.rs  lib.rs  load.rs  rand.rs
tests/: test.rs
