[package]
name = "cbench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cbench"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rayon = "1.11.0"# this deps will be replaced with my manual thread pool implementation in the future
wide = "1.2.0"
fastrand = "2.4.1"
anyhow = "1.0.102"