[package]
name = "cbench"
version = "1.0.0-alpha"
edition = "2024"

[[bin]]
name = "cbench"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.dev]
opt-level = 1
strip = false
debug = true
incremental = true

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
blas_rs = { path = "blas-rs" } # local dependency on my `blas_rs` crate
# rayon = "1.12.0"
aes-gcm = "0.11.0-rc.4"
sha3 = "0.12.0"
rand = "0.10.1"
anyhow = "1.0.102"
# wgpu = "29.0.3" # graphics API for GPU benchmarking